<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_pets"
            android:icon="@mipmap/ic_paw_black_24dp"
            android:title="@string/my_pets" />
        <item
            android:id="@+id/nav_config"
            android:icon="@mipmap/ic_account_box_black_24dp"
            android:title="@string/config" />
    </group>

            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:title="@string/action_logout"
                />


</menu>
